2007-08-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/control: Use libesd0-dev or osso-esd-dev as esd dependancy.
	Fixes NB#66548.

2007-08-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-calendar.c:
	* src/hildon-number-editor.c:
	* src/hildon-time-picker.c: Changing the timeout repeat so that it
	matches the spec of 6 chars per second. Fixes: NB#60489.

2007-08-22  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-helper.c: Really fixing NB#58352. Looks like
	gtk_style_lookup_color sometime returns FALSE even though color was
	found and values were filled properly. Weird. Removing the warning for the
	time being.

2007-08-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-find-toolbar.c: Puting the combobox inside alignment to not
	expand vertically. Adding some extra space to the find toolbar buttons to
	make them thumbable. Fixes NB#66060.

2007-08-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-calendar-popup.c: Replacing the "Done" button in the calendar
	popup with "Ok" and "Cancel". Fixes NB#59299.

2007-08-20  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-calendar.c: Process all window updates before executing next
	timeout. Fixes: NB#54146.

2007-08-17  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.13-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-08-16  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-banner.c: (hildon_banner_client_event): connect directly to
	the client event and ignore it, since we use the delete event to close
	after timeouts.

2007-08-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-helper.c: Remove the bogus warning about color not being
	found. Fixes NB#58352.

2007-08-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am: